MOAT test scripts
John Jacobsen jacobsen@npxdesigns.com

V00-00-04 6/28/05
Bug fixes/new features:
- Fixed non-flushing std. output in readgps.c

============================================================================

V00-00-03 6/28/05
Bug fixes/new features:
- Renamed options in moat and stagedtests.pl to avoid conflicts.

============================================================================

Factored out of dor-driver in March, 2005

First release notes:

fixed tcaltest so that it complains and stops if wire pair power is off.

4/20/05: Added "loopback" option to moat and stagedtests.pl
4/4/05:  Fixed readgps so that normal output goes to stdout