@@ -4,7 +4,7 @@
 # John Jacobsen, NPX Designs, Inc., jacobsen\@npxdesigns.com
 # Started: Fri Aug 13 08:38:05 2004
 
-my $Id = "Id"; my $id = "$Id: moat,v 1.6 2005-06-28 17:37:18 jacobsen Exp $x";
+my $Id = "Id"; my $id = "$Id: moat,v 1.9 2005-07-12 16:03:34 jacobsen Exp $x";
 
 package MY_PACKAGE;
 use strict;
@@ -19,7 +19,7 @@ my $savtsecs  = 0;
 my $skipmjb;
 my $fixsingle;
 my $loopback;
-my $skipkbchk = 0;
+my $skipkbchk=0;
 
 sub usage { return <<EOF;
 Usage: $0  [<dom>] ....         <dom> is e.g., 00a.  Repeatable.
@@ -67,7 +67,6 @@ GetOptions("help|h"          => \$help,
 	   "n=i"             => \$n) || die usage;
 
 die usage if $help;
-$skipkbchk = 1 if defined $skipkbchk;
 
 $loopback = 1 if defined $loopback;
 
@@ -97,7 +96,7 @@ while(!defined $dorfreq) {
     last if $dorfreq == 10 || $dorfreq == 20;
 }
 
-die usage if($testgps && $dorfreq != 10);
+die "GPS can only be run w/ 10MHz clock speed!\n".usage if($testgps && $dorfreq != 10);
 my $gpsflag = $testgps ? "-g" : "";
 
 if(defined @exclude) {
@@ -169,7 +168,7 @@ for(my $iter=0; $iter<$n; $iter++) {
 	open ST, ">st.in"; print ST $st_in; close ST;
 	my $stcmd = "/usr/local/bin/stagedtests.pl -b -t $cbsecs -x -d $dorfreq $fsarg "
 	    ."$gpsflag -s ".(defined $st_in ? "st.in" : "-p").($loopback?" -X":"")
-	    .($skipkbchk?" -S":"");
+	    .($skipkbchk?" -i":"");
 	print LOG "\n\nMOAT: Starting $stcmd\n";
 	system "$stcmd 2>&1 > st.out";
 	my $stresult = `tail -1 st.out`;
@@ -192,7 +191,7 @@ for(my $iter=0; $iter<$n; $iter++) {
 	unlink "st.out" || mydie "Can't unlink st.out: $!\n";
         open ST, ">st.in"; print ST $st_in; close ST;
 	my $stcmd = "/usr/local/bin/stagedtests.pl -t $savtsecs -v -d $dorfreq $fsarg $gpsflag "
-	    .(defined $st_in ? "st.in" : "-p").($loopback?" -X":"").($skipkbchk?" -S":"");
+	    .(defined $st_in ? "st.in" : "-p").($loopback?" -X":"").($skipkbchk?" -i":"");
 	print LOG "\n\nMOAT: Starting $stcmd\n";
 	system "$stcmd 2>&1 > st.out";
 	my $stresult = `tail -1 st.out`;
@@ -214,7 +213,7 @@ for(my $iter=0; $iter<$n; $iter++) {
 	unlink "st.out" || mydie "Can't unlink st.out: $!\n";
         open ST, ">st.in"; print ST $st_in; close ST;
 	my $stcmd = "/usr/local/bin/stagedtests.pl -t $relsecs -d $dorfreq $fsarg $gpsflag "
-	    .(defined $st_in ? "st.in" : "-p").($loopback?" -x -X":"").($skipkbchk?" -S":"");
+	    .(defined $st_in ? "st.in" : "-p").($loopback?" -x -X":"").($skipkbchk?" -i":"");
 	print LOG "\n\nMOAT: Starting $stcmd\n";
 	system "$stcmd 2>&1 > st.out";
 	my $stresult = `tail -1 st.out`;
