@@ -1,5 +1,13 @@
 MOAT test scripts
 John Jacobsen jacobsen@npxdesigns.com
+Requires: domhub-tools 100 or greater
+
+V00-00-05 7/13/05
+Bug fixes/new features:
+- Fix skipkbchk argument to moat and stagedtests.pl
+- First fully RPMed release
+
+============================================================================
 
 V00-00-04 6/28/05
 Bug fixes/new features:
